--- a/style.css
+++ b/style.css
@@ -112,4 +112,6 @@ a:link, a:visited, a:hover, a:active {
   float: left; }
 
 .tile {
-  background-color: #EFEFF7; }
+  background-color: #EFEFF7;
+  clear: both;
+  display: block; }
